--- a/index.html
+++ b/index.html
@@ -1,157 +1,76 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Мониторинг заполнения</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(to right, #f0f4f8, #e0eafc);
-            margin: 0;
-            padding: 40px;
-            color: #2c3e50;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 32px;
-            margin-bottom: 30px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: white;
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-        }
-
-        th, td {
-            padding: 16px;
-            text-align: center;
-            border-bottom: 1px solid #eee;
-        }
-
-        th {
-            background-color: #f9fafb;
-            font-weight: 600;
-            color: #34495e;
-        }
-
-        tr:last-child td {
-            border-bottom: none;
-        }
-
-        .progress-container {
-            background-color: #ecf0f1;
-            border-radius: 30px;
-            overflow: hidden;
-            height: 20px;
-            box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-        }
-
-        .progress-bar {
-            height: 100%;
-            background: linear-gradient(to right, #4caf50, #81c784);
-            color: white;
-            text-align: center;
-            white-space: nowrap;
-            transition: width 0.5s ease-in-out;
-            font-size: 14px;
-        }
-
-        input[type="number"] {
-            width: 70px;
-            padding: 6px;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            text-align: center;
-            font-size: 14px;
-        }
-
-        #footer {
-            margin-top: 40px;
-            text-align: center;
-            color: #777;
-            font-size: 14px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Мониторинг заполняемости</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Мониторинг заполнения участков и улиц</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Поселок</th>
-                <th>Кол-во улиц</th>
-                <th>Кол-во участков</th>
-                <th>Заполнено улиц</th>
-                <th>Заполнено участков</th>
-                <th>Прогресс</th>
-                <th>Статус</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Комфорт</td>
-                <td><input type="number" id="totalStreets1" value="0" min="0" onchange="updateProgress(1)"></td>
-                <td><input type="number" id="totalPlots1" value="0" min="0" onchange="updateProgress(1)"></td>
-                <td><input type="number" id="filledStreets1" value="0" min="0" onchange="updateProgress(1)"></td>
-                <td><input type="number" id="filledPlots1" value="0" min="0" onchange="updateProgress(1)"></td>
-                <td><div class="progress-container"><div id="progressBar1" class="progress-bar" style="width:0%">0%</div></div></td>
-                <td id="status1">Не начато</td>
-            </tr>
-            <tr>
-                <td>Комфорт Плюс</td>
-                <td><input type="number" id="totalStreets2" value="0" min="0" onchange="updateProgress(2)"></td>
-                <td><input type="number" id="totalPlots2" value="0" min="0" onchange="updateProgress(2)"></td>
-                <td><input type="number" id="filledStreets2" value="0" min="0" onchange="updateProgress(2)"></td>
-                <td><input type="number" id="filledPlots2" value="0" min="0" onchange="updateProgress(2)"></td>
-                <td><div class="progress-container"><div id="progressBar2" class="progress-bar" style="width:0%">0%</</div></div></td>
-                <td id="status2">Не начато</td>
-            </tr>
-            <tr>
-                <td>Стандарт</td>
-                <td><input type="number" id="totalStreets3" value="0" min="0" onchange="updateProgress(3)"></td>
-                <td><input type="number" id="totalPlots3" value="0" min="0" onchange="updateProgress(3)"></td>
-                <td><input type="number" id="filledStreets3" value="0" min="0" onchange="updateProgress(3)"></td>
-                <td><input type="number" id="filledPlots3" value="0" min="0" onchange="updateProgress(3)"></td>
-                <td><div class="progress-container"><div id="progressBar3" class="progress-bar" style="width:0%">0%</div></div></td>
-                <td id="status3">Не начато</td>
-            </tr>
-        </tbody>
-    </table>
 
-    <div id="footer">
-        © 2025 Застройщик | Онлайн-мониторинг заполняемости данных
+  <button class="theme-toggle" onclick="toggleTheme()">🌗 Тема</button>
+  <button class="task-toggle" onclick="toggleTask()">📋 Задание</button>
+
+  <h1>Мониторинг заполняемости участков и улиц</h1>
+  <div class="container">
+
+    <!-- Карточка 1 -->
+    <div class="card">
+      <h2>Комфорт</h2>
+      <div class="grid">
+        <div><label>Кол-во улиц</label><input type="number" id="totalStreets1" onchange="updateProgress(1)"></div>
+        <div><label>Кол-во участков</label><input type="number" id="totalPlots1" onchange="updateProgress(1)"></div>
+        <div><label>Заполнено улиц</label><input type="number" id="filledStreets1" onchange="updateProgress(1)"></div>
+        <div><label>Заполнено участков</label><input type="number" id="filledPlots1" onchange="updateProgress(1)"></div>
+      </div>
+      <div class="progress-container"><div id="progressBar1" class="progress-bar">0%</div></div>
+      <div class="status"><span class="status-dot not-started" id="dot1"></span><span id="status1">Не начато</span></div>
     </div>
 
-    <script>
-        function updateProgress(id) {
-            const totalStreets = parseInt(document.getElementById(`totalStreets${id}`).value) || 0;
-            const filledStreets = parseInt(document.getElementById(`filledStreets${id}`).value) || 0;
-            const totalPlots = parseInt(document.getElementById(`totalPlots${id}`).value) || 0;
-            const filledPlots = parseInt(document.getElementById(`filledPlots${id}`).value) || 0;
+    <!-- Карточка 2 -->
+    <div class="card">
+      <h2>Комфорт Плюс</h2>
+      <div class="grid">
+        <div><label>Кол-во улиц</label><input type="number" id="totalStreets2" onchange="updateProgress(2)"></div>
+        <div><label>Кол-во участков</label><input type="number" id="totalPlots2" onchange="updateProgress(2)"></div>
+        <div><label>Заполнено улиц</label><input type="number" id="filledStreets2" onchange="updateProgress(2)"></div>
+        <div><label>Заполнено участков</label><input type="number" id="filledPlots2" onchange="updateProgress(2)"></div>
+      </div>
+      <div class="progress-container"><div id="progressBar2" class="progress-bar">0%</div></div>
+      <div class="status"><span class="status-dot not-started" id="dot2"></span><span id="status2">Не начато</span></div>
+    </div>
 
-            const totalItems = totalStreets + totalPlots;
-            const filledItems = filledStreets + filledPlots;
+    <!-- Карточка 3 -->
+    <div class="card">
+      <h2>Стандарт</h2>
+      <div class="grid">
+        <div><label>Кол-во улиц</label><input type="number" id="totalStreets3" onchange="updateProgress(3)"></div>
+        <div><label>Кол-во участков</label><input type="number" id="totalPlots3" onchange="updateProgress(3)"></div>
+        <div><label>Заполнено улиц</label><input type="number" id="filledStreets3" onchange="updateProgress(3)"></div>
+        <div><label>Заполнено участков</label><input type="number" id="filledPlots3" onchange="updateProgress(3)"></div>
+      </div>
+      <div class="progress-container"><div id="progressBar3" class="progress-bar">0%</div></div>
+      <div class="status"><span class="status-dot not-started" id="dot3"></span><span id="status3">Не начато</span></div>
+    </div>
+  </div>
 
-            const percent = totalItems > 0 ? Math.min(Math.round((filledItems / totalItems) * 100), 100) : 0;
+  <!-- Панель задания -->
+  <div id="taskPanel" class="task-panel hidden">
+    <div class="task-content">
+      <h2>📌 Задание</h2>
+      <p>Разрабатывается сайт для застройщика недвижимости в РФ. У застройщика 3 поселка, по каждому из них отдельный файл (будет предоставлен). Ваша задача:</p>
+      <ul>
+        <li>✔ Самостоятельно договориться и распределить работу между собой.</li>
+        <li>✔ Придумать и реализовать инструмент мониторинга хода работы. Я должен в любую минуту знать % заполнения.</li>
+        <li>✔ Внести участки в систему.</li>
+        <li>✔ Отчитаться о проделанной работе.</li>
+      </ul>
+      <p><strong>Структура данных:</strong> Поселок → Улицы → Участки. Участок привязывается к Улице, а Улица — к Поселку.</p>
+      <button class="close-task" onclick="toggleTask()">Закрыть</button>
+    </div>
+  </div>
 
-            const bar = document.getElementById(`progressBar${id}`);
-            bar.style.width = percent + "%";
-            bar.innerText = percent + "%";
-
-            const status = document.getElementById(`status${id}`);
-            if (percent === 0) {
-                status.innerText = "Не начато";
-            } else if (percent < 100) {
-                status.innerText = "В процессе";
-            } else {
-                status.innerText = "Готово";
-            }
-        }
-    </script>
+  <script src="scripts.js"></script>
 </body>
 </html>
